--- a/src/app.html
+++ b/src/app.html
@@ -7,10 +7,10 @@
         <meta name="googlebot" content="index,follow"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-        <link rel="shortcut icon" href="/images/favicon.ico">
-        <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-        <script defer src="/js/fontawesome-all.js"></script>
+        <link rel="shortcut icon" href="/static/images/favicon.ico">
+        <link rel="icon" type="image/png" sizes="32x32" href="/static/images/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/static/images/favicon-16x16.png">
+        <script defer src="/static/js/fontawesome-all.js"></script>
         <title>Jared Geilich</title>
     </head>
     <body>
